# bloom-digital-assessment

./: .env.example  .gitignore  README.md  Senior AI Systems Engineer - Technical_Assessment.docx  docker-compose.yml  pyproject.toml
app/: __init__.py  circuit_breaker.py  config.py  dependencies.py  exceptions.py  generation.py  llm_client.py  main.py  memory.py  metrics.py  models.py  pipeline.py  prompts.py  rate_limit.py  schemas.py  validator.py
docker/: Dockerfile  entrypoint.sh
docs/: ARCHITECTURE.md
tests/: conftest.py  test_api.py  test_circuit_breaker.py  test_generation.py  test_pipeline.py  test_rate_limit.py  test_validator.py
